# src/routes/version1/version1.route.ts
@@ -30,25 +30,25 @@ Route.use('/role', RoleController)
 Route.use('/auth', AuthController)
 Route.use('/user', UserController)
 Route.use('/navigations', NavigationController)
-Route.use('/role_has_navigations', RoleHasNavigationController)
-Route.use('/user_has_navigations', UserHasNavigationController)
+Route.use('/role-has-navigations', RoleHasNavigationController)
+Route.use('/user-has-navigations', UserHasNavigationController)
 Route.use('/suppliers', SupplierController)
 Route.use('/drivers', DriverController)
 Route.use('/customers', CustomerController)
 Route.use('/employees', EmployeeController)
 Route.use('/purchases', PurchaseController)
-Route.use('/usage_delta_pressures', UsageDeltaPressureController)
-Route.use('/usage_evcs', UsageEvcController)
-Route.use('/usage_turbines', UsageTurbineController)
-Route.use('/contract_key_terms', ContractKeyTermController)
-Route.use('/contract_pjbgs', ContractPjbgController)
+Route.use('/usage-delta-pressures', UsageDeltaPressureController)
+Route.use('/usage-evcs', UsageEvcController)
+Route.use('/usage-turbines', UsageTurbineController)
+Route.use('/contract-key-terms', ContractKeyTermController)
+Route.use('/contract-pjbgs', ContractPjbgController)
 Route.use('/offers', OfferController)
 Route.use('/invoices', InvoiceController)
-Route.use('/invoice_usages', InvoiceUsageController)
+Route.use('/invoice-usages', InvoiceUsageController)
 Route.use('/deposits', DepositController)
 Route.use('/expenses', ExpenseController)
-Route.use('/petty_cashes', PettyCashController)
-Route.use('/cash_advances', CashAdvanceController)
+Route.use('/petty-cashes', PettyCashController)
+Route.use('/cash-advances', CashAdvanceController)
 Route.use('/payrolls', PayrollController)
 
 export { Route as v1Route }
